Fixed the too small text for live game timing

--- a/MMM-NHL.css
+++ b/MMM-NHL.css
@@ -18,8 +18,3 @@
     vertical-align: middle;
 }
 
-.MMM-NHL .live {
-    font-size: 10px;
-    line-height: 15px;
-    display: block;
-}
